--- a/style.css
+++ b/style.css
@@ -24,19 +24,18 @@
 /* Intro Button Styling */
 .intro-btn {
   width: 138px;
-  height: 51px;
   background: #6A6A6A;
   color: #fff;
   opacity: 1;
   font-size: 16px;
   font-family: 'Roboto', Arial, sans-serif;
   font-weight: bold;
-  line-height: 28px;
   letter-spacing: 0px;
    opacity: 1;
   border: none;
   cursor: pointer;
   transition: background 0.2s, color 0.2s;
+  padding:10px;
 }
 .intro-btn:hover {
   background: #FDB913;
@@ -356,15 +355,7 @@ html, body {
   display:block;
   margin-top:18px;
 }
-.box {
-  position: relative;
-  display: inline-block;
-  background: #3C3B3B;   /* dark box */
-  color: #FDB913;
-  padding: 24px 40px 30px;
-  border-radius: 4px;
-  margin: 0 12px;
-}
+
 
 .box::after {
     content: "";
@@ -587,6 +578,14 @@ body {
   font-size:28px;
   margin-bottom:25px;
 }
+.big-title::after {
+    content: "";
+    width: 400px;
+    height: 1px;
+    background: #D2A53C;
+    display: block;
+    margin-top: 10px;
+}
 
 
 .info-item{
@@ -615,7 +614,7 @@ body {
 .form-title::after{
   content:"";
   width:400px;
-  height:2px;
+  height:1px;
   background:#D2A53C;
   display:block;
   margin-top:10px;
@@ -625,7 +624,8 @@ form{
   margin-top:20px;
 }
 
-input,textarea{
+input, textarea {
+  font-family: 'Roboto';
   width:100%;
   border:1px solid #ddd;
   padding:10px;
@@ -738,7 +738,7 @@ button{
   gap: 12px;
 }
 .contact-info-label {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: 'Roboto';
   font-size: 13px;
   font-weight: 700;
   color: #222;
@@ -3094,8 +3094,8 @@ tr{
   background:#464646;
   width:340px;
   height:140px;
-  padding:28px 20px;
-  text-align:center;
+  padding:18px 14px;
+  text-align:left;
   color:#EAA704;
   font-family:'Roboto',sans-serif;
   position:relative;
@@ -3116,10 +3116,11 @@ tr{
 .box-text{
   color:white;
   font-size:14px;
-  margin-top:18px;
+  margin-top:10px;
   opacity:0;
   transform:translateY(10px);
   transition:all .35s ease;
+  text-align: left;
 }
 
 /* 🔥 Hover Effect — Open Like XD */
